fixed: project title's word spacing

--- a/app/assets/stylesheets/homepage_projects_display_box.css.sass
+++ b/app/assets/stylesheets/homepage_projects_display_box.css.sass
@@ -47,13 +47,16 @@ $white: #fff
     font-size: 18px
     color: $blue
     font-weight: bold
+    margin-top: 5px
+    margin-bottom: 2px
+    word-spacing: -1px
   .project-info
     font-size: 12px
     line-height: 18px
     color: $grey
   .project-description
-    line-height: 20px
-    font-size: 14px
+    line-height: 19px
+    font-size: 13px
     height: 150px
     word-wrap: break-word
   .project-footer-bar
